# KeyboxChecker

./: .gitignore  README.md  action.yml  pyproject.toml
.github/: status
.github/workflows/: android.yml  check.yml  pylint.yml  release.yml  stale.yml  test.yml
docs/: README.zh-CN.md
keyboxchecker/: __init__.py  __main__.py  aosp_ec_test.pem  knox.pem
