[tool.poetry]
name = "keyboxchecker"
version = "0.1.0"
description = ""
authors = ["Li Hua <lihua@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.1"
defusedxml = "^0.7.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
