[tool.poetry]
name = "keyboxchecker"
version = "0.1.0"
description = ""
authors = ["Li Hua <lihua@email.com>"]
readme = "README.md"
repository = "https://github.com/real-LiHua/KeyboxChecker"
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.1"
defusedxml = "^0.7.1"
requests = "^2.32.3"
six = "^1.16.0"

[tool.poetry.scripts]
keyboxchecker = "keyboxchecker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
