[tool.poetry]
name = "keyboxchecker"
version = "1.2.4"
description = ""
authors = ["Li Hua <lihua@email.com>"]
readme = "README.md"
repository = "https://github.com/real-LiHua/KeyboxChecker"
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: Android",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.8"
cryptography = "^43.0.1"
defusedxml = "^0.7.1"
requests = "^2.32.3"

[tool.poetry.scripts]
keyboxchecker = "keyboxchecker.__main__:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/real-LiHua/KeyboxChecker/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
